fix: overflow:hidden 추가

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ body {
   margin: auto;
   padding: 0;
   max-width: 600px;
-  overflow: hidden scroll;
+  overflow: hidden;
   font-family: "Roboto", "Noto Sans KR", sans-serif;
   /* background-color: #f5f5f5;
   background-image: radial-gradient(#ccc 1px, transparent 1px);
@@ -26,7 +26,7 @@ body {
 .layoutContainer {
   /* width: 100%; */
   /* max-width: 600px; */
-  height: 100dvh;
+  min-height: 100dvh;
   /* background-color: red; */
   border: 1px solid black;
 }
